Fix alignment of main element for backups, restores, downloads

--- a/client/landing/jetpack-cloud/sections/backups/rewind-flow/style.scss
+++ b/client/landing/jetpack-cloud/sections/backups/rewind-flow/style.scss
@@ -138,3 +138,7 @@ a.rewind-flow-notice__title-warning:visited {
 	font-size: 16px;
 	font-weight: bold;
 }
+
+.theme-jetpack-cloud .main.rewind-flow {
+	margin-left: auto;
+}
