--- a/client/landing/jetpack-cloud/sections/backups/style.scss
+++ b/client/landing/jetpack-cloud/sections/backups/style.scss
@@ -16,3 +16,7 @@
 .backups__search-description {
     margin-bottom: 2rem;
 }
+
+.backups__page .main {
+	margin-left: auto;
+}
